--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "mongoose": "^6.6.1",
     "nodemon": "^2.0.20",
     "telegraf": "^4.9.2"
+  },
+  "devDependencies": {
+    "@flydotio/dockerfile": "^0.2.16"
   }
 }
